--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,36 +15,36 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
+    <!-- My Css -->
     <link rel="stylesheet" href="dist/main.css" />
-    <title>Document</title>
+    <title>Huddle landing page</title>
   </head>
   <body>
     <!-- HOME SECTION -->
 
-    <section
-      class="home"
-      style="background-image: url(./images/bg-hero-desktop.svg)"
-      with="100%"
-      heigth="100%"
-    >
+    <section class="home">
       <div class="home__content container">
-        <header class="home__header">
-          <img src="./images/logo.svg" alt="Logo" class="home__logo" />
-          <button class="home__button">Try It Free</button>
+        <header class="header">
+          <img
+            src="./images/logo-small.svg"
+            alt="Header logo img"
+            class="header__logo"
+          />
+          <button class="btn header__button">Try It Free</button>
         </header>
-        <div class="home__boxes">
-          <div class="home__box home__box--left">
+        <div class="home__output">
+          <div class="home__title">
             <h1 class="home__heading">
-              Built The Comunity Your Fans Will Love
+              Built The Community Your Fans Will Love
             </h1>
             <p class="home__paragraph">
               Huddle re-imagines the way we build communities. You have a voice,
               but so does your audiance. Create connections with your users as
               you engage in genuine discussion
             </p>
-            <button class="btn">Get Started For Free</button>
+            <button class="btn home__button">Get Started For Free</button>
           </div>
-          <div class="home__box home__box--right">
+          <div class="home__picture">
             <img
               class="home__img"
               src="./images/illustration-mockups.svg"
@@ -60,10 +59,10 @@
 
     <section class="about">
       <div class="about__content container">
-        <div class="about__box">
-          <div class="about__title">
+        <div class="about__card">
+          <div class="about__title about__title-reverse">
             <h2 class="about__heading">Grow Together</h2>
-            <p class="about_paragraph">
+            <p class="about__paragraph">
               Generate meaningful discussions with your audiance and build a
               strong, loyal community. Think of the insinghtful conversations
               you miss out on with a feedback form.
@@ -76,7 +75,7 @@
             />
           </div>
         </div>
-        <div class="about__box">
+        <div class="about__card">
           <div class="about__img">
             <img
               src="./images/illustration-flowing-conversation.svg"
@@ -85,17 +84,17 @@
           </div>
           <div class="about__title">
             <h2 class="about__heading">Flowing Conversations</h2>
-            <p class="about_paragraph">
+            <p class="about__paragraph">
               You wouldn't paginate a conversation in real life, so why do it
               online? Our threads have just-in-time loading for a more natural
               flow.
             </p>
           </div>
         </div>
-        <div class="about__box">
-          <div class="about__title">
+        <div class="about__card">
+          <div class="about__title about__title-reverse">
             <h2 class="about__heading">Your Users</h2>
-            <p class="about_paragraph">
+            <p class="about__paragraph">
               It takes no time at all to intergrate Huddle with your app's
               authentication solution. This means, one singed in to your app,
               your ussers can start chatting immediately.
